--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">projectTest2</string>
+    <string name="app_name">memoWithNFC</string>
     <string name="inputcontent">메모 내용 입력</string>
     <string name="KoreanOK">확인</string>
     <string name="KoreanCancel">취소</string>
