카테고리 메모 화면에서 지나간 메모를 확인할 수 있음
중복되는 레이아웃을 분리

앱 타이틀을 제외한 사용되는 폰트를 scdream로 통일

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">memoWithNFC</string>
+    <string name="write_memo">메모 작성</string>
+    <string name="whole_memo">전체 메모</string>
     <string name="inputcontent">메모 내용 입력</string>
     <string name="KoreanOK">확인</string>
     <string name="KoreanCancel">취소</string>
